# pokedex

./: .flake8.cfg  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: check.yaml
pokedex/: constants.py
pokedex/api/: __init__.py  __main__.py  client.py  constants.py  models.py
pokedex/api/request/: __init__.py  protocol.py
pokedex/api/request/implementations/: __init__.py  cached.py  default.py
pokedex/db/: actions.py  client.py  models.py
scripts/: __init__.py
tests/fixtures/: __init__.py  endpoints.response.json  jigglypuff.response.json  pokemon.move.headbutt.response.json  pokemon.moves.response.1.json  pokemon.moves.response.2.json  pokemon.type.fairy.response.json  pokemon.types.response.json
tests/pokedex/api/: test_client.py
tests/pokedex/db/: test_actions.py  test_client.py  test_models.py
