[tool.poetry]
name = "pokedex"
version = "0.0.0"
description = "a tool for sourcing info about different Pokémon"
authors = ["withtwoemms <withthoemms@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.31.0"

[tool.poetry.dev-dependencies]
black = "23.3.0"
flake8 = "6.0.0"
isort = "5.12.0"
pre-commit = "3.3.2"

[build-system]
requires = ["poetry-core==1.5.0"]
build-backend = "poetry.core.masonry.api"