[tool.poetry]
name = "pokedex"
version = "0.0.0"
description = "a tool for sourcing info about different Pokémon"
authors = ["withtwoemms <withthoemms@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "2.31.0"
urllib3 = "<=1.26.16"
pydantic = "^1.10.8"
actionpack = "^1.7.15"

[tool.poetry.group.dev.dependencies]
coverage = "5.5"
black = "23.3.0"
flake8 = "6.0.0"
isort = "5.12.0"
pre-commit = "3.3.2"

[tool.poetry.scripts]
tests = "scripts:tests"
coverage = "scripts:coverage"
lint = "scripts:lint"
check = "scripts:check"
get-pokemon = "pokedex.api.__main__:go"

[build-system]
requires = ["poetry-core==1.5.0"]
build-backend = "poetry.core.masonry.api"